# sway-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: initial_migration.py  user_auth_migration.py
app/: main.py
app/api/: __init__.py  auth.py  chat.py  dependencies.py  permissions.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  conversation.py  message.py  user.py
app/schemas/: __init__.py  auth.py  conversation.py  message.py
app/services/: __init__.py  auth.py  chat_service.py  conversation_analyzer.py  response_processor.py  therapy_prompt.py  translation_service.py
