[tool.poetry]
name = "sway-backend"
version = "0.1.0"
description = "Backend service for Sway chat application"
authors = ["Sway Team"]
readme = "README.md"
packages = [{include = "sway_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
alembic = "^1.15.1"
pydantic = "^2.10.6"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
websockets = "^15.0.1"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
